--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "mobx": "6.6.0",
     "mobx-react-lite": "3.4.0",
     "mobx-state-tree": "5.1.5",
+    "nativewind": "^2.0.11",
     "react": "18.0.0",
     "react-native": "0.69.5",
     "react-native-bootsplash": "4.3.2",
@@ -69,7 +70,8 @@
     "react-native-screens": "3.15.0",
     "reactotron-mst": "3.1.4",
     "reactotron-react-js": "^3.3.7",
-    "reactotron-react-native": "5.0.3"
+    "reactotron-react-native": "5.0.3",
+    "tailwindcss": "^3.2.1"
   },
   "devDependencies": {
     "@babel/core": "^7.18.0",
